<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkBlue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/pink"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_manual"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        android:padding="20dp" />

    <EditText
        android:id="@+id/ip_manual"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/darkBlue"
        android:hint="@string/ip_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/port_manual"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/darkBlue"
        android:hint="@string/port_hint"
        android:maxLength="4"
        android:inputType="number" />

    <Button
        android:id="@+id/connect_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/greenBlue"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:text="@string/connect_manual"
        android:textColor="@color/darkBlue"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>