<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkBlue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/pink"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp" >

        <Button
            android:id="@+id/scanQRcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/greenBlue"
            android:padding="30dp"
            android:text="@string/scanQRCode"
            android:textColor="@color/darkBlue"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp" >

        <Button
            android:id="@+id/manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkBlue"
            android:text="@string/manual"
            android:textColor="@color/greenBlue"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>